2021-04-13  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m--download-queue-hardcoded-point-min): Eliminate
	awful constant integer.
	(w3m--download-queue-list-point-min): Replace with nice new variable.
	(w3m-download-queue-previous-entry): Use it.
	(w3m--download-update-statistics)
	(w3m--download-update-faces-pre-command)
	(w3m--download-update-faces-post-command): Use it.
	(w3m--download-queue-buffer-header-string) Eliminate awful function.
	(w3m--download-queue-buffer-header-string): Replace with nice constant
	string.
	(w3m-download-queue-mode): Use header-line-format to prettify buffer.
	(w3m--download-update-display-queue-list)
	(w3m--download-refresh-buffer): Attempt to fix bouncing cursor when
	buffer is empty.
	(w3m-download-queue-help): Use package key-assist to improve help feature.
	(w3m-download-view-queue): Display queue buffer even when empty, and
	don't display help lines in header.
	(w3m-download-increase-simultaneous)
	(w3m-download-decrease-simultaneous, w3m-download-buffer-quit): Minor
	docstring improvements.

2021-04-08  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-toggle-inline-images): Don't let user-error start a
	backtrace when toggle-debug-on-error is set.
	(w3m-image-page-displayed-p, w3m-view-previous-page)
	(w3m--goto-url--handler-function): when w3m-current-url is NIL, don't
	perform string operations on it.
	(w3m-delete-buffer-if-empty): Only operate on live buffers.
	(w3m-view-previous-page): fix typo in optional arg list.

2021-03-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	Delete useless history warning

	* w3m-hist.el (w3m-history-add-properties): Don't warn about null hist.

2021-03-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	Silence the byte compiler on Emacs 28

	* mew-w3m.el (mew-w3m-ext-url-fetch):
	* w3m-proc.el (w3m-process-with-null-handler):
	Init let-bound var `handler' to nil explicitly.

2021-02-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	Don't show a backstage while performing `text-scale-adjust'
